packages/errors/test/__snapshots__/EXPERIMENTAL_STUDIO_REMOVED.ansi
[31mThe [33mexperimentalStudio[39m[31m option was removed in Cypress version 15.4.0.[39m
[31m[39m
[31mCypress Studio is now available for all users.[39m
[31m[39m
[31mYou can safely remove this option from your config.[39m